--- a/BoulderDash/BoulderDashApp.csproj
+++ b/BoulderDash/BoulderDashApp.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BoulderDashLibrary\BoulderDashLibrary.csproj">
+      <Project>{bddada64-acce-423a-b18d-4e3b901bfbec}</Project>
+      <Name>BoulderDashLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
