--- a/BoulderDashLibrary/BoulderDashLibrary.csproj
+++ b/BoulderDashLibrary/BoulderDashLibrary.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Model\Timer.cs" />
     <Compile Include="Model\Wall\Wall.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CurrentPlayObjectDirection.cs" />
     <Compile Include="Utils\FileReader.cs" />
     <Compile Include="Utils\Shapes.cs" />
     <Compile Include="View\GameView.cs" />
