--- a/BoulderDashLibrary/BoulderDashLibrary.csproj
+++ b/BoulderDashLibrary/BoulderDashLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Controller\GameController.cs" />
     <Compile Include="Controller\ViewController.cs" />
     <Compile Include="Model\Boulder.cs" />
+    <Compile Include="Model\IDestructable.cs" />
     <Compile Include="Model\PlayGroundFactory.cs" />
     <Compile Include="Model\Squares\AssetSquare.cs" />
     <Compile Include="Model\Wall\ExitWall.cs" />
