--- a/BoulderDashLibrary/BoulderDashLibrary.csproj
+++ b/BoulderDashLibrary/BoulderDashLibrary.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Model\IExplodable.cs" />
     <Compile Include="Model\PlayGroundFactory.cs" />
     <Compile Include="Model\Squares\AssetSquare.cs" />
-    <Compile Include="Model\Wall\ExitSquare.cs" />
+    <Compile Include="Model\Squares\ExitSquare.cs" />
     <Compile Include="Model\Wall\NormalWall.cs" />
     <Compile Include="Model\Wall\SteelWall.cs" />
     <Compile Include="Model\PlayElement\Creature.cs" />
